--- a/src/main/resources/emailTemplte/appointmentEmail.html
+++ b/src/main/resources/emailTemplte/appointmentEmail.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>Appointment Confirmation</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+        }
+        h2 {
+            color: #007bff;
+        }
+        p {
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
 <h2>Dear <span th:text="${name}">User</span>,</h2>
